Improve UI * Fix Dark mode (outdated class references) * Make dark mode menu item a checkbox * Fix initializer functions in `renderer/js/index.js` * Improve dark mode toggle to not require a page reload * Re-add scrollbar * Allow scrolling in login screen (fixes #177) * Hide "Open in app" button * Remove sidebar gap and use default Instagram navigation (temporary) * Remove Zoom menu entries (cause application crashes and CSS issues)

--- a/app/src/renderer/styles/core/_login.scss
+++ b/app/src/renderer/styles/core/_login.scss
@@ -1,8 +1,3 @@
-.not-logged-in body {
-  overflow: hidden;
-}
-
-
 /* Hide elements */
 
 #react-root {
@@ -119,4 +114,21 @@
 
 #react-root ._e0mru {
   box-shadow: none;
+}
+
+/**
+ * Fix Scrolling/Positioning
+ */
+
+/* Show scrollbar */
+
+#react-root ._29u45 {
+  overflow: visible;
+}
+
+/* Add bottom margin & remove border */
+
+#react-root main[role="main"] {
+  margin-bottom: 44px;
+  border-width: 0px;
 }
