--- a/app/src/renderer/styles/core/_other.scss
+++ b/app/src/renderer/styles/core/_other.scss
@@ -26,3 +26,11 @@
 #react-root ._cbomp {
   left: 80px;
 }
+
+/**
+ * Hide "Open in app" button
+ */
+
+._jdrlj, ._t0se8 {
+  display: none;
+}
