--- a/app/src/renderer/styles/theme-dark/_search.scss
+++ b/app/src/renderer/styles/theme-dark/_search.scss
@@ -1,48 +1,31 @@
-/* discover text */
-
-html.dark-mode #react-root ._bgfey {
-  color: $gray;
-}
-
-
-/* search field bg */
-
-html.dark-mode #react-root ._oyz6j {
-  background-color: $dark;
-}
-
-
-/* search field hover */
-
-html.dark-mode #react-root ._xk9bu {
-  background-color: $darkLight;
-}
-
-
 /* seach field */
 
-html.dark-mode #react-root ._9x5sw,
-html.dark-mode #react-root ._55bi1 {
+html.dark-mode #react-root ._jcvs2._kjnbr {
   color: $bright;
   background-color: #303b47;
   border-color: #303b47;
 }
 
-
-/* input border */
-
-html.dark-mode #react-root ._55bi1,
-html.dark-mode #react-root ._48qwd {
-  border-color: #303b47;
-}
-
-
 /* search drop-down */
 
-html.dark-mode #react-root ._o1o4h {
+html.dark-mode #react-root ._etpgz {
   background-color: $dark;
   box-shadow: 0 0 5px rgba(0, 0, 0, .85);
   border-color: $darkLight;
+}
+
+html.dark-mode #react-root ._etpgz {
+  ._gimca {
+    border-color: $darkLight;
+  }
+
+  ._5tsk5 {
+    background: $darkLight;
+  }
+
+  span {
+    color: $bright;
+  }
 }
 
 html.dark-mode #react-root ._o1o4h::after {
@@ -66,9 +49,7 @@ html.dark-mode #react-root ._k2vj6 span {
   color: $gray;
 }
 
-
-/* border ul top */
-
-html.dark-mode #react-root ._769lo {
-  border-color: $darkLight;
+/* item container */
+html.dark-mode #react-root ._lq68t._bk5sx {
+  background-color: $dark;
 }
